--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 <body>
 
 <div class="jumbotron text-center" style="margin-bottom:0">
-    <h1>College of Engineering - CSULB </h1>
-  <h3> <i class="fas fa-university" style="font-size:60px;color:gold;text-shadow:2px 2px 4px #000000;"></i></h3>
+    <h1>Computer Science 2020 </h1>
+  <h3></i></h3>
 
 </div>
 
@@ -28,8 +28,8 @@
 
     <div class="row featurette">
       <div class="col-md-7">
-        <h2 class="featurette-heading">A LITTLE ABOUT <span class="text-muted">ME.</span></h2>
-        <p class="lead">My name is Malhar Pandya, I am a Junior and I study Computer Science. I am pertrified of the finals as I write this.</p>
+        <h2 class="featurette-heading">Introduction <span class="text-muted"></span></h2>
+        <p class="lead">My name is Malhar Pandya, I am a Junior and I study Computer Science. I am pertrified of the finals as I write this. I am currently 18 years old and I am in my second year of University<br> I look forward to what the future has to offer!</p>
       </div>
       <div class="col-md-5">
         <img src="MalharPandyaPic.PNG"  width="300" height="350">
@@ -58,8 +58,11 @@
    <hr class="featurette-divider">    
     
 <div class="jumbotron text-center" style="margin-bottom:0">
-  <p>Three Links</a> -  <a href="https://www.csulb.edu/" target="_blank"> "\n" <a href="https://www.csulb.edu/" target="_blank"> "\n" <a href="https://www.csulb.edu/" target="_blank"></a></p><p>Last updated on 5-06-21</p>
-    <i class="fas fa-chalkboard-teacher" style="font-size:60px;color:gold;text-shadow:2px 2px 4px #000000;"></i>
+  <p>Three Links</a> -  <a href="https://www.csulb.edu/" target="_blank"> "Csulb Website" <br><a href="https://www.csulb.edu/academic-advising/the-learning-center/tutoring/tutoring" target="_blank"> 
+"CSulb Tutoring" <br><a href="https://bbcsulb.desire2learn.com/" target="_blank"> 
+"BeachBoard"</p>
+   
+<p>Last updated on 5-06-21</p>
 </div>
     </div>
 </body>
