--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Malhar Pandya - 105 Activity</title>
+  <title>Malhar Pandya </title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -16,7 +16,7 @@
 <body>
 
 <div class="jumbotron text-center" style="margin-bottom:0">
-    <h1>Computer Science 2020 </h1>
+    <h1>Computer Science 2022 </h1>
   <h3></i></h3>
 
 </div>
